# thesis

./: .gitignore  README.md
apriltag_docking/docking_controller/: CMakeLists.txt  package.xml
apriltag_docking/docking_controller/include/: controller.hpp
apriltag_docking/docking_controller/scripts/: launch_controller.sh
apriltag_docking/docking_controller/src/: controller.cpp  docking_client.cpp  docking_client_backup.cpp  docking_service.cpp
apriltag_docking/docking_interfaces/: CMakeLists.txt  package.xml
apriltag_docking/docking_interfaces/msg/: CurrentState.msg  StartDocking.msg
apriltag_docking/docking_interfaces/srv/: StartAprilTagDetection.srv
my_apriltag/: package.xml  setup.cfg  setup.py
my_apriltag/my_apriltag/: camera_calibration.py  detect_tag.py  detect_tag_pupil.py  detect_tag_swat.py
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/launch/: docking_controller.launch.py  template_launch.launch.py
my_robot_interfaces/: CMakeLists.txt  package.xml
my_robot_interfaces/msg/: AprilTagDetection.msg  TagDetection.msg
my_simulations/: CMakeLists.txt  package.xml
my_simulations/launch/: my_world.launch.py
my_simulations/models/dock/: model.config  model.sdf
my_simulations/models/dock/mesh/: dock.dae  dock.stl
my_simulations/models/tag36_11_00408/: model.config  model.sdf
my_simulations/models/tag36_11_00408/materials/scripts/: Apriltag.material
my_simulations/models/turtlebot3_waffle_pi/: model.sdf
my_simulations/rviz/: my_rviz.rviz
my_simulations/src/: gazebo_battery_state.cpp
my_simulations/worlds/: my_world.world
picam_node/: CMakeLists.txt  package.xml
picam_node/config/: camerav2_1280x960.yaml
picam_node/src/: camera_info.cpp
