<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_apriltag</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hadrien@todo.todo">hadrien</maintainer>
  <license>TODO: License declaration</license>

  <!-- <build_depend>eigen</build_depend> -->

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>opencv2</depend>
  <depend>docking_interfaces</depend>

  <depend>my_robot_interfaces</depend>
  

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
